<resources>
    <string name="app_name">Salary2</string>
    <string name="date">Date</string>
    <string name="write_note">write note</string>
    <string name="save">SAVE</string>
    <string name="_0">฿0</string>
    <string name="add_transation">Add transation</string>
    <string name="back">Back</string>
    <string name="signout">signout</string>
    <string name="tap_to_view_full_report">Tap to view full report</string>
    <string name="overview">Overview</string>
    <string name="inflow">Inflow</string>
    <string name="outflow">outflow</string>
    <string name="_20">฿ 20</string>
    <string name="_1000">฿ 1000</string>
    <string name="_980">฿ 980</string>
    <string name="total">ยอดรวม</string>
    <string name="food">อาหาร</string>
    <string name="shoppie">ช็อปปิ้ง</string>
    <string name="car">ค่ารถค่าน้ำมัน</string>
    <string name="family">ครอบครัว</string>
    <string name="tel">ค่าโทรศัพท์</string>
    <string name="game">ค่าเกมส์</string>
    <string name="room">ค่าที่พัก</string>
    <string name="revesu">รายรับ</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="_26">26</string>
    <string name="today">Today</string>
    <string name="september_2019">September 2019</string>
    <string name="username">Username</string>
    <string name="create_your_account">Create Your Account</string>
</resources>
