<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/write"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/_26"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/date_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/september_2019"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:id="@+id/price_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:paddingTop="15dp"
                android:paddingRight="20dp"
                android:text="@string/_20"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/namefoods"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:text="@string/family"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="right"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:text="@string/_20"
                android:textColor="@color/red"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>