<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <LinearLayout
        android:id="@+id/food_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/food"
            tools:ignore="ContentDescription,NestedWeights,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/food"
            android:textColor="#000000 "
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shopping_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/shop"
            tools:ignore="ContentDescription,NestedWeights,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/shoppie"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/carfare_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/car"
            tools:ignore="ContentDescription,NestedWeights,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/car"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/family_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/ss"
            tools:ignore="ContentDescription,NestedWeights,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/family"
            android:textColor="#000000 "
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tel_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/telephot"
            tools:ignore="ContentDescription,NestedWeights,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/tel"
            android:textColor="#000000 "
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/game"
            tools:ignore="ContentDescription,NestedWeights,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/game"
            android:textColor="#000000 "
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/room_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/room"
            tools:ignore="ContentDescription,NestedWeights,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/room"
            android:textColor="#000000 "
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/revenue_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:src="@drawable/room"
            tools:ignore="ContentDescription,NestedWeights,RtlSymmetry" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/revesu"
            android:textColor="#000000 "
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>