<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/home_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#D16219"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/user"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="text"
                    tools:ignore="TextFields"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg2"
                    android:text="@string/login"
                    android:textSize="20sp" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/registration"
                 android:text="@string/create_your_account"
                 android:layout_gravity="center"
                 android:textSize="20sp"
                 android:layout_marginTop="15dp"
                 />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <include
        android:id="@+id/registration_layout"
        layout="@layout/user_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</RelativeLayout>