<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/sep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/september_2019"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="179dp"
                android:layout_height="185dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="491dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray2"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/food"
                        android:textColor="@color/gray2"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="match_parent"
                        android:background="@color/pink"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/shoppie"
                        android:textColor="@color/pink"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="match_parent"
                        android:background="@color/green"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/car"
                        android:textColor="@color/green"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="match_parent"
                        android:background="@color/red"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/family"
                        android:textColor="@color/red"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="match_parent"
                        android:background="@color/blue"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/tel"
                        android:textColor="@color/blue"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="match_parent"
                        android:background="@color/sky"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/game"
                        android:textColor="@color/sky"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray3"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/room"
                        android:textColor="@color/gray3"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray" />
    </LinearLayout>

</RelativeLayout>