<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddDetail">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/price_ed"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_0"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:inputType="number"
                android:layout_marginTop="15dp"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_cost_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/game"
                    android:layout_marginStart="50dp"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/cost_type_tv"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="10dp"
                    android:gravity="start" />

            </LinearLayout>

            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:layout_height="1.5dp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/date"
                    android:textSize="25sp"
                    android:gravity="center"
                    />
                <Button
                    android:id="@+id/pickDate"
                    android:layout_width="0dp"
                    android:layout_weight="1.3"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:text="@string/date"
                    android:background="@drawable/bg3"
                    android:textColor="@color/write"
                    android:layout_marginEnd="20dp" />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:layout_height="1.5dp"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/write_note_ed"
                android:textSize="25sp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/write_note"
                android:importantForAutofill="no" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>